# TheCardGuardian

./: README.md  pyproject.toml
thecardguardian/: __init__.py  main.py
thecardguardian/BotModel/: __init__.py  thecardguardian.py
thecardguardian/cogs/: MagicTCG.py  TheCardGuardianInfo.py  __init__.py  magic_tcg.py  thecardguardian_info.py  yugioh.py
