[tool.poetry]
name = "thecardguardian"
version = "0.1.0"
description = ""
authors = ["PeterAjaaa <89441024+PeterAjaaa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = {extras = ["speed"], version = "^2.5.0"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
